[project]
name = "vmkit"
version = "0.2.0"
description = "ESXi/vCenter VM automation library: connect, clone, datastore ops, VMX rendering."
requires-python = ">=3.14"
dependencies = [
    "pyvmomi>=9.1.0.0",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmkit"]
